--- a/notebooks/demo1.ipynb
+++ b/notebooks/demo1.ipynb
@@ -99,10 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux v01 6.8.0-48-generic #48~22.04.1-Ubuntu SMP PREEMPT_DYNAMIC Mon Oct  7 11:24:13 UTC 2 x86_64 x86_64 x86_64 GNU/Linux\n"
+     ]
+    }
+   ],
+   "source": [
+    "!uname -a"
+   ]
   },
   {
    "cell_type": "code",
