--- a/docs/source/notebooks/demo.ipynb
+++ b/docs/source/notebooks/demo.ipynb
@@ -4,7 +4,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "f83ccaed-6429-408d-a7e8-91e55c67721f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# demo\n",
     "\n",
